# hyphae.spora

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: 01_smiles_exploration.ipynb
scripts/: export_results.py  run_degradation.py  run_ovito.py
spora/: config.py
spora/db/: connection.py  queries.py  schema.sql
spora/models/: experiment.py  polymer.py
spora/ovito_pipeline/: loader.py  renderer.py
spora/rdkit_pipeline/: degradation.py  descriptors.py  smiles_builder.py
tests/: test_db.py  test_rdkit_pipeline.py
